Name: dfsbuild
Version: 0.7.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2006 John Goerzen
Build-Depends: haskell-src, network, unix, parsec, MissingH>=0.13.1

Executable: dfsbuild
Main-Is: dfsbuild.hs
GHC-Options: -O2
Extensions: ExistentialQuantification, AllowOverlappingInstances,
    AllowUndecidableInstances
